--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -2,3 +2,9 @@ body {
   min-height: 75rem;
   padding: 4.5rem;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
