--- a/angular/src/app/customers/customers.component.html
+++ b/angular/src/app/customers/customers.component.html
@@ -36,7 +36,7 @@
         <td>{{ customer.dateOfBirth }}</td>
         <td>{{ customer.address }}</td>
         <td>
-          <a href="/customer/{{ customer.id }}/edit" class="material-icons bg-primary border-0 rounded text-light p-1 mx-1">
+          <a href="/customers/{{ customer.id }}/edit" class="material-icons bg-primary border-0 rounded text-light p-1 mx-1">
             edit
           </a>
           <button class="material-icons bg-danger border-0 rounded text-light p-1 mx-1" (click)="delete(customer)">
