--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -8,3 +8,7 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.w-10 {
+  width: 10% !important;
+}
