--- a/angular/src/app/customers/customers.component.html
+++ b/angular/src/app/customers/customers.component.html
@@ -31,10 +31,10 @@
     </thead>
     <tbody>
       <tr *ngFor="let customer of customers">
-        <td>{{ customer.firstName }}</td>
-        <td>{{ customer.lastName }}</td>
-        <td>{{ customer.dateOfBirth }}</td>
-        <td>{{ customer.address }}</td>
+        <td class="align-middle">{{ customer.firstName }}</td>
+        <td class="align-middle">{{ customer.lastName }}</td>
+        <td class="align-middle">{{ customer.dateOfBirth }}</td>
+        <td class="align-middle">{{ customer.address }}</td>
         <td>
           <a href="/customers/{{ customer.id }}/edit" class="material-icons bg-primary border-0 rounded text-light p-1 mx-1">
             edit
