--- a/angular/src/app/biller-new/biller-new.component.html
+++ b/angular/src/app/biller-new/biller-new.component.html
@@ -5,7 +5,7 @@
 <div class="my-3 p-3 bg-white rouded box-shadow w-50 mx-auto">
   <div class="form-group">
     <label for="first-name-input">Company Name</label>
-    <input type="text" id="first-name-input" class="form-control" [(ngModel)]="newBiller.companyName">
+    <input type="text" id="first-name-input" class="form-control" [(ngModel)]="billerForm.companyName">
   </div>
   
 
