Added deleting biller

--- a/angular/src/app/billers/billers.component.html
+++ b/angular/src/app/billers/billers.component.html
@@ -33,7 +33,7 @@
             <a href="/billers/{{ biller.id }}/edit" class="material-icons bg-primary border-0 rounded text-light p-1 mx-1">
               edit
             </a>
-            <button class="material-icons bg-danger border-0 rounded text-light p-1 mx-1" (click)="delete(biller)">
+            <button class="material-icons bg-danger border-0 rounded text-light p-1 mx-1" (click)="delete(biller.id)">
               delete_forever
             </button>
           </td>
