Added functional to customers part

--- a/angular/src/app/customer-edit/customer-edit.component.html
+++ b/angular/src/app/customer-edit/customer-edit.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="form-group">
     <label for="date-of-birth-input">Date of Birth</label>
-    <input type="text" id="date-of-birth-input" class="form-control" [(ngModel)]="customerForm.dateOfBirth">
+    <input type="date" id="date-of-birth-input" class="form-control" [(ngModel)]="customerForm.dateOfBirth">
   </div>  
 
   <div class="text-center mt-4">
