--- a/angular/src/app/customers/customers.component.html
+++ b/angular/src/app/customers/customers.component.html
@@ -39,7 +39,7 @@
           <a href="/customers/{{ customer.id }}/edit" class="material-icons bg-primary border-0 rounded text-light p-1 mx-1">
             edit
           </a>
-          <button class="material-icons bg-danger border-0 rounded text-light p-1 mx-1" (click)="delete(customer)">
+          <button class="material-icons bg-danger border-0 rounded text-light p-1 mx-1" (click)="delete(customer.id)">
             delete_forever
           </button>
         </td>
