--- a/angular/src/app/biller-new/biller-new.component.html
+++ b/angular/src/app/biller-new/biller-new.component.html
@@ -6,8 +6,8 @@
   <div class="form-group">
     <label for="first-name-input">Company Name</label>
     <input type="text" id="first-name-input" class="form-control" [(ngModel)]="billerForm.companyName">
+    <div class="alert alert-danger mt-2" *ngIf="!isCompanyNameValid">Company name must not be blank and contains only A-z and a-z</div>
   </div>
-  
 
   <div class="text-center mt-4">
     <button class="btn btn-dark text-center w-50" (click)="createBiller()">Create</button>
