--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a href="/" class="nav-link">Payment</a>
+        <a href="/payments" class="nav-link">Payment</a>
       </li>
 
       <li class="nav-item">
