--- a/angular/src/app/payment-new/payment-new.component.html
+++ b/angular/src/app/payment-new/payment-new.component.html
@@ -5,24 +5,22 @@
 <div class="my-3 p-3 bg-white rouded box-shadow w-50 mx-auto">
   <div class="form-group">
     <label for="customer-input">Customer</label>
-    <select id="customer-input" class="form-control" [(ngModel)]="newPayment.customerId">
-      <option value="0" selected>Choose...</option>
-      <option value="1">Some Cool Customer</option>
-    </select>
-    <div class="alert alert-danger mt-2" *ngIf="!isCustomerValid">Choose something</div>        
+    <input type="text" id="customer-input" class="form-control" [(ngModel)]="customerSearchString" list="customers" (keyup)="onChangeCustomerSearchString()">
+    <datalist id="customers">
+      <option *ngFor="let customer of filteredCustomers" [value]="customer.firstName + ' ' + customer.lastName"></option>
+    </datalist>
   </div>
   <div class="form-group">
     <label for="biller-input">Biller</label>
-    <select id="biller-input" class="form-control" [(ngModel)]="newPayment.billerId">
-      <option value="0" selected>Choose...</option>      
-      <option value="1">Another Nice Biller</option>
-    </select>
+    <input type="text" id="biller-input" class="form-control" [(ngModel)]="billerSearchString" list="billers" (keyup)="onChangeBillerSearchString()">
+    <datalist id="billers">
+      <option *ngFor="let biller of filteredBillers" [value]="biller.companyName"></option>
+    </datalist>
     <div class="alert alert-danger mt-2" *ngIf="!isBillerValid">Choose something</div>        
   </div>
   <div class="form-group">
     <label for="account-input">Account</label>
-    <input type="text" id="account-input" class="form-control" [(ngModel)]="newPayment.account">
-    <div class="alert alert-danger mt-2" *ngIf="!isAccountValid">Must not be blank</div>    
+    <input type="text" id="account-input" class="form-control" [(ngModel)]="paymentForm.account">
   </div>
   <div class="form-group">
     <label for="amount-input">Amount</label>
@@ -30,7 +28,7 @@
       <div class="input-group-prepend">
         <div class="input-group-text">$</div>
       </div>
-      <input type="number" id="amount-input" class="form-control" [(ngModel)]="newPayment.amount">
+      <input type="number" id="amount-input" class="form-control" [(ngModel)]="paymentForm.amount">
     </div>
     <div class="alert alert-danger mt-2" *ngIf="!isAmountValid">Must not be blank and be grater than 0</div>
   </div>
